So I was wrong about that last commit. I did not fix the issue. I have now though. I had to change some styles to use box-sizing: border-box and set overflow to hidden. Now everything SHOULD be working.

--- a/style.css
+++ b/style.css
@@ -14,13 +14,19 @@
 }
 
 
+body {
+    box-sizing: border-box;
+    width: 100vw;
+    height: 2000px;
+}
 
 
 /* CONTENT WRAPPER */
 .content-wrapper {
+    box-sizing: border-box;
     background-color: var(--main-background-color);
 
-    position: static;
+    position: relative;
 
     width: 100vw;
     height: 100%;
@@ -93,12 +99,12 @@
 
 /* --- ARTICLE STYLE --- */
 .about-me {
+    overflow: hidden;
+    box-sizing: border-box;
     background-color: var(--article-background-color);
 
     /*border: 1px solid red;*/
-    position: relative;
     top: 0px;
-
     display: block;
     
     width: 85vw;
@@ -130,20 +136,24 @@
 }
 
 .s1 {
+
     display: block;
     padding: 20px 10%;
-    overflow: auto;
+    height: 100%;
+    
 }
 
 .s1 h2 {
+    
     margin-bottom: 20px;
-    overflow: inherit;
+    
 }
 
 .s1 p {
+    
     line-height: 50px;
     margin: 20px 0px;
     text-indent: 60px;
-    overflow: inherit;
+    
 }
 
